--- a/popsicle/index.html
+++ b/popsicle/index.html
@@ -9,7 +9,18 @@
 <body>
     <div class="popsicle-content">
         <div class="popsicle">
-            <div class="light-popsicle"></div>
+            <div class="light-popsicle">
+
+                <div class="eyes">
+                    <div class="eye"></div>
+                    <div class="eye"></div>
+                </div>
+
+                <div class="mouth">
+                    <div class="tongue"></div>
+                </div>
+                
+            </div>
         </div>
         <div class="popsicle-shadow"></div>
         <div class="pick"></div>
