--- a/popsicle/index.html
+++ b/popsicle/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Picolé</title>
 </head>
 <body>
-    <div class="popsicle-content">
+    <div class="canva">
         <div class="popsicle">
             <div class="light-popsicle">
 
